--- a/radioactive_elements_app/src/components/ElementCard/ElementCard.css
+++ b/radioactive_elements_app/src/components/ElementCard/ElementCard.css
@@ -1,3 +1,13 @@
 .cardImg {
-    padding: "16px 16px 0 16px"
+    padding: 16px 16px 0 16px;
+}
+
+.cardTitle {
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.cardText {
+    font-family: 'Georgia', sans-serif;
 }
