--- a/radioactive_elements_app/src/components/NavigationBar/NavigationBar.css
+++ b/radioactive_elements_app/src/components/NavigationBar/NavigationBar.css
@@ -1,3 +1,12 @@
 .navbarImg {
     margin-right: 5px;
 }
+
+.navBar {
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 0.02rem;
+}
+
+.navLink {
+    font-size: 1.1rem;
+}
