--- a/radioactive_elements_app/src/pages/main/Main.css
+++ b/radioactive_elements_app/src/pages/main/Main.css
@@ -1,7 +1,7 @@
 .cont {
   height: 100vh;
   width: 100vw;
-  background-image: url('../../assets/background.gif');
+  background-image: url('/background.gif');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -9,4 +9,13 @@
   color: white;
   margin: 0;
   padding: 0;
+}
+
+.mainTitle {
+  font-family: 'Oswald', sans-serif;
+}
+
+.mainText {
+  font-family: 'Georgia', sans-serif;
+  font-size: 1.1rem;
 }
