--- a/radioactive_elements_app/src/components/NavigationBar/NavigationBar.css
+++ b/radioactive_elements_app/src/components/NavigationBar/NavigationBar.css
@@ -10,3 +10,10 @@
 .navLink {
     font-size: 1.1rem;
 }
+
+.loginLogoutButtons {
+    font-size: 1.1rem;
+    color: white !important;
+    border: 1px solid white!important;
+    border-radius: 0%;
+}
