--- a/radioactive_elements_app/src/pages/AddEditElement/AddEditElement.css
+++ b/radioactive_elements_app/src/pages/AddEditElement/AddEditElement.css
@@ -29,3 +29,17 @@
     font-family: 'Oswald', sans-serif;
     font-size: 1.1rem;
 }
+
+.elementAddEditAttributes {
+    font-family: 'Georgia', sans-serif;
+    font-size: 16px;
+}
+
+.elementAddEditAttributesButton {
+    font-family: 'Oswald', sans-serif;
+}
+
+.elementAttributeNameValue {
+    font-family: 'Georgia', sans-serif;
+    margin-right: 5px;
+}
