--- a/radioactive_elements_app/src/pages/Element/Element.css
+++ b/radioactive_elements_app/src/pages/Element/Element.css
@@ -10,3 +10,13 @@
 .elementName {
     font-family: 'Oswald', sans-serif;
 }
+
+.elementAttributes {
+    table-layout: fixed;
+    font-family: 'Georgia', sans-serif;
+}
+
+.elementAttributesLabel {
+    font-family: 'Georgia', sans-serif;
+    font-size: 16px;
+}
